# wxCalc

./: CMakeLists.txt  README.md
src/: Calc.cpp  Calc.h  MyApp.cpp  MyApp.h
